tree-sitter-syslang/test/corpus/headings.txt
==================
Headings
==================
# Heading 1
## Heading 2
### Heading 3
#### Heading 4
##### Heading 5
###### Heading 6
---
(document
  (heading (heading_1 (heading_1_marker) (text_to_eol)))
  (heading (heading_2 (heading_2_marker) (text_to_eol)))
  (heading (heading_3 (heading_3_marker) (text_to_eol)))
  (heading (heading_4 (heading_4_marker) (text_to_eol)))
  (heading (heading_5 (heading_5_marker) (text_to_eol)))
  (heading (heading_6 (heading_6_marker) (text_to_eol)))
)
