tree-sitter-syslang/test/corpus/horizontal-rule.txt
==================
Horizontal rule
==================
---
---
(document
  (horizontal_rule)
)


==================
Double horizontal rule
==================
===
---
(document
  (double_horizontal_rule)
)
