tree-sitter-syslang/test/corpus/italic_boundaries.txt
================================================================================
Italic with word boundaries
================================================================================
This is /italic/ text
--------------------------------------------------------------------------------

(document
  (text_line
    (text)
    (italic
      (italic_start)
      (italic_content)
      (italic_end))
    (text)))

================================================================================
Path should not be italic
================================================================================
/asd/qwe
--------------------------------------------------------------------------------

(document
  (text_line
    (text)))

================================================================================
Path in middle of text
================================================================================
The path /usr/local/bin is here
--------------------------------------------------------------------------------

(document
  (text_line
    (text)))

================================================================================
Italic at start of line
================================================================================
/italic/ at the beginning
--------------------------------------------------------------------------------

(document
  (text_line
    (italic
      (italic_start)
      (italic_content)
      (italic_end))
    (text)))

================================================================================
Italic at end of line
================================================================================
Text ends with /italic/
--------------------------------------------------------------------------------

(document
  (text_line
    (text)
    (italic
      (italic_start)
      (italic_content)
      (italic_end))))

================================================================================
Multiple slashes in path
================================================================================
/home/user/documents/file.txt
--------------------------------------------------------------------------------

(document
  (text_line
    (text)))

================================================================================
Mixed italic and paths
================================================================================
This /italic/ and path /usr/bin and another /italic/ here
--------------------------------------------------------------------------------

(document
  (text_line
    (text)
    (italic
      (italic_start)
      (italic_content)
      (italic_end))
    (text)
    (italic
      (italic_start)
      (italic_content)
      (italic_end))
    (text)))